--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@ table{
     border: solid;
     border-radius: 5px;
 }
+img{
+    max-width: 30%;
+    max-height: 25%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-right: 2%;
+    float: left;
+}
