--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     padding-left:5%;
     width: 90%;
     background-color:#dcedf5;
+    font-family: 'Open Sans', sans-serif;
 }
 .good{
     color: green;
