--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body{
 }
 header :last-child{
     background-color: yellow;
-}
-header p{
-    width: 20%;
-    text-align: center;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+ 
 }
 #first{
     font-weight: bold;
@@ -43,4 +43,14 @@ img{
     margin-bottom: 2%;
     margin-right: 2%;
     float: left;
+}
+header{
+    width:50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    text-align: center;
+    border-top: solid white;
+    border-bottom: solid darkgrey;
+    border-radius: 5px;
+    box-shadow: inset 0 0 0 2000px rgba(255,255,255,.5);
 }
