--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body{
     padding-right: 5%;
     padding-left:5%;
     width: 90%;
-    background-color:#dcedf5;
+    background-color:#8ab1c4;
     font-family: 'Open Sans', sans-serif;
+    color: rgba(50, 49, 49, 0.7);
 }
 .good{
     color: green;
@@ -20,10 +21,11 @@ body{
     color: darkviolet;
 }
 header :last-child{
-    background-color: yellow;
+    background-color: rgba(255, 255, 0, 0.334);
     width: 50%;
     margin-right: 25%;
     margin-left: 25%;
+    border-radius: 10px;
  
 }
 #first{
@@ -39,18 +41,20 @@ table{
 img{
     max-width: 30%;
     max-height: 25%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    margin-right: 2%;
+    margin-top: 4%;
+    margin-bottom:4%;
+    margin-right: 4%;
     float: left;
+    border-radius: 5px;
 }
 header{
     width:50%;
     margin-left: 25%;
     margin-right: 25%;
     text-align: center;
-    border-top: solid white;
-    border-bottom: solid darkgrey;
+    border-top: solid rgb(255,255,255);
+    border-bottom: solid rgba(50, 50, 50, 0.7);
     border-radius: 5px;
-    box-shadow: inset 0 0 0 2000px rgba(255,255,255,.5);
+    box-shadow: inset 0 0 2000px rgba(255,255,255,.5), 0 0 2rem rgba(0,0,0,.5);
+    margin-bottom: 10rem;
 }
