--- a/style.css
+++ b/style.css
@@ -32,11 +32,14 @@ header :last-child{
     font-weight: bold;
 }
 .grey{
-    background-color:lightgrey;
+    background-color:rgba(88, 85, 85, 0.251);
 }
 table{
-    border: solid;
+    border-top: solid rgba(255, 255, 255, 0.822);
+    border-bottom:solid rgba(50, 50, 50, 0.7);
     border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.375);
+    box-shadow: inset 0 0 2000px rgba(255,255,255,.3), 0 0 2rem rgba(0,0,0,.5);
 }
 img{
     max-width: 30%;
@@ -52,7 +55,7 @@ header{
     margin-left: 25%;
     margin-right: 25%;
     text-align: center;
-    border-top: solid rgb(255,255,255);
+    border-top: solid rgba(255,255,255,.7);
     border-bottom: solid rgba(50, 50, 50, 0.7);
     border-radius: 5px;
     box-shadow: inset 0 0 2000px rgba(255,255,255,.5), 0 0 2rem rgba(0,0,0,.5);
