--- a/style.css
+++ b/style.css
@@ -61,3 +61,14 @@ header{
     box-shadow: inset 0 0 2000px rgba(255,255,255,.5), 0 0 2rem rgba(0,0,0,.5);
     margin-bottom: 10rem;
 }
+.banner{
+    background-color:rgba(0, 0, 0, 0.659);
+    border-radius: 5px;
+    color: rgba(255, 255, 255, 0.799);
+    padding: 1%;
+    width: auto;
+}
+#bannerh2{
+    margin-left: 36%;
+    text-align: center;
+}
