--- a/style.css
+++ b/style.css
@@ -83,3 +83,19 @@ header{
     margin-right: 10%;
     text-align: center;
 }
+a {
+    position: relative;
+    display: inline-block;
+    margin-top: 20px;
+  }
+  
+  a[title]:hover::after {
+    content: attr(title);
+    position: absolute;
+    left: 100%;
+    color: red;
+    background-color: black;
+    border-radius: 7px;
+    opacity: .7;
+    padding: 10%;
+  }
