--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ table{
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.375);
     box-shadow: inset 0 0 2000px rgba(255,255,255,.3), 0 0 2rem rgba(0,0,0,.5);
+    text-align: center;
 }
 img{
     max-width: 30%;
@@ -101,4 +102,8 @@ a {
   }
   #smallerBanner{
       max-width: 30%;
+  }
+  tfoot{
+      display: table-cell;
+      
   }
