--- a/style.css
+++ b/style.css
@@ -107,3 +107,8 @@ a {
       display: table-cell;
       
   }
+  footer{
+        background-color:rgba(0, 0, 0, 0.659);
+        height:5rem;
+        color: white;
+  }
