--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ table{
     background-color: rgba(255, 255, 255, 0.375);
     box-shadow: inset 0 0 2000px rgba(255,255,255,.3), 0 0 2rem rgba(0,0,0,.5);
     text-align: center;
+    margin: 1%;
 }
 img{
     max-width: 30%;
@@ -110,5 +111,8 @@ a {
   footer{
         background-color:rgba(0, 0, 0, 0.659);
         height:5rem;
-        color: white;
+        color: rgba(255, 255, 255, 0.577);
+        text-align: center;
+        
   }
+
