--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img{
     max-width: 30%;
     max-height: 25%;
     margin-top: 4%;
-    margin-bottom:4%;
+    margin-bottom:1%;
     margin-right: 4%;
     float: left;
     border-radius: 5px;
@@ -80,10 +80,9 @@ header{
     
 }
 .bannerOther{
-    margin-left: 45%;
-    max-width: 50%;
+   
+    max-width: auto;
     margin-right: 10%;
-    text-align: center;
 }
 a {
     position: relative;
