--- a/style.css
+++ b/style.css
@@ -41,7 +41,10 @@ table{
     background-color: rgba(255, 255, 255, 0.375);
     box-shadow: inset 0 0 2000px rgba(255,255,255,.3), 0 0 2rem rgba(0,0,0,.5);
     text-align: center;
-    margin: 1%;
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 35%;
+
 }
 img{
     max-width: 30%;
@@ -102,6 +105,8 @@ a {
   }
   #smallerBanner{
       max-width: 30%;
+      margin-left: 35%;
+      margin-right: 35%;
   }
   tfoot{
       display: table-cell;
